# sova-engine

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
ext/aip/: CMakeLists.txt
ext/aip/headers/: CMakeLists.txt
ext/aip/src/: CMakeLists.txt
ext/aip/src/Filtration3/: CMakeLists.txt
ext/aip/src/Filtration3/common/: CMakeLists.txt  DocMessage.cpp  DocMessage.h
ext/aip/src/Filtration3/stopdict_ex/: CMakeLists.txt  StopDictEx.cpp  StopDictEx.h
ext/aip/src/Filtration3/terms/: CMakeLists.txt  FltTerm.h  FltTermsArray.cpp  FltTermsArray.h  FltTermsBase.cpp  FltTermsBase.h  FltTermsBaseLP.cpp  FltTermsBaseRO.cpp  FltTermsBaseWR.cpp  FltTermsMatcher.cpp  FltTermsMatcher.h  (+9 more)
ext/aip/src/LingProc4/: BinaryData.h  CMakeLists.txt  Constants.h  DetectWords.cpp  DetectWords.h  IndirectTable.h  IndirectTableFS.h  LPStrict.cpp  LPStrict.h  LanguageInfo.cpp  LanguageInfo.h  LemmatizeResultFunctor.h  LexID.h  LexID32.h  LexID64.h  LexIDExtra.h  LingProc.cpp  LingProc.h  LingProcData.cpp  LingProcData.h  LingProcDict.cpp  LingProcDict.h  LingProcErrors.cpp  LingProcErrors.h  LingProcPresets.h  Markup.h  MarkupAttr.h  MarkupBin.h  MarkupStorage.h  MarkupTypes.h  NormalizeResultFunctor.h  StemmatizeResultFunctor.h  StringsReceiver.h  UTFCanonizer.cpp  UTFCanonizer.h  WordNormalizer.cpp  WordNormalizer.h  WordNormalizerInterface.h
ext/aip/src/ZTools/: CMakeLists.txt
ext/aip/src/_include/: CodePages.h  Cp2Uni.h  _inttype.h  _stdio_.h  _string.h  _time.h  _utf8.h  cc_compat.h  koi8_ctype.h  language.h  ntoh.h  wintypes.h
ext/aip/src/lib/: CMakeLists.txt
ext/clientlib/ClientLib/: Allocator.cpp  Allocator.h  Answer.c  Answer.h  CMakeLists.txt  CSData.hpp  ClientLib.c  ClientLib.h  ClientLib.hpp  Errors.h  InfData.c  InfData.h  ItemTypes.hpp  Protocol.hpp  SessionData.c  SessionData.h  csDataPack.cpp  csDataPack.h
ext/clientlib/apcs/: CMakeLists.txt  ap-server.c  csdata.c  csdata.h  libclient.c  readwrite.c  readwrite.h
ext/clientlib/nMemoryAllocator/: CMakeLists.txt  nMemoryAllocator.cpp  nMemoryAllocator.hpp
src/EllipsisCompiler/: CMakeLists.txt  EllipsisCompiler.conf  EllipsisCompiler.cpp  EllipsisCompiler.hpp  EllipsisSources.conf  MainEllipsisCompiler.cpp
src/InfEngine2/InfEngine/: CMakeLists.txt  CoreRO.cpp  CoreRO.hpp  CoreWR.cpp  CoreWR.hpp  DLData.cpp  DLData.hpp  ExtFinder.cpp  ExtFinder.hpp  Finder.cpp  Finder.hpp  Format.hpp  IndexBase.cpp  IndexBase.hpp  Indexer.cpp  Indexer.hpp  InfOutput.h  InfPattern.cpp  InfPattern.hpp  InfProfile.cpp  InfProfile.hpp  MatchedPattern.cpp  MatchedPattern.hpp  NDocImage.cpp  NDocImage.hpp  PatternsStorage.cpp  PatternsStorage.hpp  RequestStat.hpp  SearchEngine.cpp  SearchEngine.hpp  Session.cpp  Session.hpp  TLCSCache.cpp  TLCSCache.hpp  TermsStorage.cpp  TermsStorage.hpp  iAnswer.cpp  iAnswer.hpp
src/InfEngine2/InfEngine/InfDict/: InfDict.cpp  InfDict.hpp  InfDictInstrInclude.cpp  InfDictInstrInclude.hpp  InfDictInstruction.hpp  InfDictManipulator.cpp  InfDictManipulator.hpp  InfDictSource.cpp  InfDictSource.hpp  InfDictString.cpp  InfDictString.hpp  InfDictStringManipulator.cpp  InfDictStringManipulator.hpp  InfDictWrapManipulator.hpp
src/InfEngine2/InfEngine/InfFunctions/: Alias.cpp  Alias.hpp  AliasParser.cpp  AliasParser.hpp  AliasRegistry.cpp  AliasRegistry.hpp  FuncTagRegistry.cpp  FuncTagRegistry.hpp  FunctionsRegistry.cpp  FunctionsRegistry.hpp  InfExternalFunction.cpp  InfExternalFunction.hpp  InfFunction.cpp  InfFunction.hpp  InfInternalFunction.cpp  InfInternalFunction.hpp  TagFunctionsCache.cpp  TagFunctionsCache.hpp
src/InfEngine2/InfEngine/InfPattern/: ConditionsRegistry.cpp  ConditionsRegistry.hpp  Dict.cpp  Dict.hpp  Errors.hpp  ItemTypes.h  Items.hpp  Parser.cpp  Parser.hpp  String.hpp  StringParser.cpp  StringParser.hpp  Weight.hpp
src/InfEngine2/InfEngine/Signature/: BFunctions.cpp  BFunctions.hpp  BInfEngineInfo.cpp  BInfEngineInfo.hpp  Format.hpp  Function.cpp  Function.hpp  Signature.cpp  Signature.hpp  SignatureFormat.hpp  SignatureUtils.cpp  SignatureUtils.hpp
src/InfEngine2/InfEngine/Symbolyms/: SymbolymBase.cpp  SymbolymBase.hpp  SymbolymCommon.hpp  SymbolymTables.cpp  SymbolymTables.hpp
src/InfEngine2/InfEngine/Synonyms/: ListFileParser.cpp  ListFileParser.hpp  SynonymBase.cpp  SynonymBase.hpp  SynonymCommon.hpp  SynonymCompiler.cpp  SynonymCompiler.hpp  SynonymFormat.hpp  SynonymIndex.cpp  SynonymIndex.hpp  SynonymMatcher.cpp  SynonymMatcher.hpp  SynonymParser.cpp  SynonymParser.hpp
src/InfEngine2/InfEngine/Terms/: InfTermAttrs.hpp  InfTerms.hpp  Matcher.cpp  Matcher.hpp
src/InfEngine2/InfEngine/Vars/: Default.hpp  Id.hpp  Registry.cpp  Registry.hpp  Vector.cpp  Vector.hpp
src/NanoLib/: Blocks.cpp  Blocks.hpp  CMakeLists.txt  Cache.hpp  CacheMemcached.cpp  CacheMemcached.hpp  ConfigFile.cpp  ConfigFile.hpp  Doxyfile  Encoding.hpp  FlagsStorage.hpp  KeyboardNumberParser.cpp  KeyboardNumberParser.hpp  LogSystem.cpp  LogSystem.hpp  LongFloat.cpp  LongFloat.hpp  NameIndex.cpp  NameIndex.hpp  NanoLib.hpp  NanoRandomBox.cpp  NanoRandomBox.hpp  NumberConvertor.cpp  NumberConvertor.hpp  NumberParser.cpp  NumberParser.hpp  RawHashTable.cpp  RawHashTable.hpp  ReturnCode.hpp  TextFuncs.hpp  VoiceNumberParser.cpp  VoiceNumberParser.hpp  aTextString.hpp  aTextStringFunctions.hpp  nMemoryAllocator.cpp  nMemoryAllocator.h  nMemoryAllocator.hpp  nVector.hpp
src/Utils/FuncMon/: CMakeLists.txt  FuncMon.cpp
src/Utils/Signature/: CMakeLists.txt  CheckSignature.cpp
src/ap-process-server/: CMakeLists.txt  ap-process-server.c
src/lib/functions/: CMakeLists.txt  FunctionLib.hpp
src/lib/functions/Common/: AllTrim.cpp  And.cpp  CMakeLists.txt  Concatenate.cpp  IsNum.cpp  Not.cpp  Or.cpp  ProperName.cpp  Replace.cpp  Shuffle.cpp  ToLower.cpp  ToUpper.cpp
src/lib/functions/Dates/: CMakeLists.txt  DateDist.cpp  DateGreater.cpp  DateLess.cpp  Extract.cpp  TimeGreater.cpp  TimeLess.cpp
src/lib/functions/Math/: BigGreater.cpp  BigLess.cpp  CMakeLists.txt  Diff.cpp  Divide.cpp  Greater.cpp  Less.cpp  Minus.cpp  Multiply.cpp  Plus.cpp  Random.cpp  Remainder.cpp
(+571 files in other folders)
